<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/outline_arrow_back_24"
            android:layout_marginBottom="@dimen/_16sdp"/>

        <TextView
            android:id="@+id/titleUpdateUserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_user_title"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/_24sdp"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="@dimen/_24sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/_24sdp">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardCornerRadius="@dimen/_50sdp"
                    app:cardElevation="0dp"
                    android:layout_marginBottom="@dimen/_16sdp">
                    
                    <ImageView
                        android:id="@+id/updateProfileImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:background="#EEEEEE"/>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnSelectPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Photo"
                    android:background="@drawable/bg_btn_blue_16"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="@dimen/_32sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">

                <TextView
                    android:id="@+id/newFirstNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_firstname_text"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/etFirstName"
                    android:hint="Micheal"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/newLastNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_lastname_text"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/etLastName"
                    android:hint="Jackson"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <Spinner
                    android:id="@+id/spinnerGenderUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_16sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/etPhone"
                    android:hint="Phone"
                    android:inputType="phone"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/etAddress"
                    android:hint="Address"
                    android:inputType="textPostalAddress|textMultiLine"
                    android:minLines="2"
                    android:gravity="top"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/labelDomainUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Product domain"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/etDomain"
                    android:hint="Product domain"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:textSize="14sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/newPassText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_pass_text"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:hint="New Password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:textSize="14sp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnUpdate"
            android:text="Update User"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56sdp"
            android:textSize="16sp"
            android:background="@drawable/bg_btn_dark_16"
            android:textStyle="bold"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"/>

    </LinearLayout>
</ScrollView>